# asn1_codec

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.1  Dockerfile  Dockerfile.amazonlinux  Dockerfile.debug  Dockerfile.dev  Dockerfile.keeprunning  Dockerfile.server  Dockerfile.server.alpine  Dockerfile.server.amazonlinux  Dockerfile.standalone  Dockerfile.testing  README.md  README.md.old  build.sh  build_codec.sh  build_local.sh  confluent.repo  do_kafka_test.sh  docker-compose-confluent-cloud.yml  docker-compose-debug.yml  docker-compose-kafka.yml  docker-compose-server-alpine.yml  docker-compose-server-amazonlinux.yml  docker-compose-server.yml  docker-compose.yml  docker_build.cmd  docker_build.sh  docker_dev_build.cmd  dynamic_types_parse.py  fedora.repo  find_dynamic_names.sh  run-composed-with-mount.cmd  run-with-mount.cmd  run-with-mount.sh  run_acm.sh  run_acm_server.sh  (+4 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
asn1_api/: 1609dot2-schema.asn  AccelSteerYawRateConfidence.c  AccelSteerYawRateConfidence.h  Acceleration.c  Acceleration.h  AccelerationConfidence.c  AccelerationConfidence.h  AccelerationSet4Way.c  AccelerationSet4Way.h  AddGrpB_Angle.c  AddGrpB_Angle.h  AddGrpB_Elevation.c  AddGrpB_Elevation.h  AddGrpB_MsgCount.c  AddGrpB_MsgCount.h  AddGrpB_TimeMark.c  AddGrpB_TimeMark.h  AdvisoryBroadcast.c  AdvisoryBroadcast.h  AdvisoryBroadcastType.c  AdvisoryBroadcastType.h  AdvisoryDetails.c  AdvisoryDetails.h  AdvisorySituationBundle.c  AdvisorySituationBundle.h  AdvisorySituationData.c  AdvisorySituationData.h  AdvisorySituationDataDistribution.c  AdvisorySituationDataDistribution.h  AdvisorySpeed.c  AdvisorySpeed.h  AdvisorySpeedList.c  AdvisorySpeedList.h  AdvisorySpeedType.c  AdvisorySpeedType.h  AesCcmCiphertext.c  AesCcmCiphertext.h  AllowedManeuvers.c  AllowedManeuvers.h  Altitude.c  (+1260 more)
asn1c_1609dot2/: .gitignore  1609dot2-schema.asn  Makefile
asn1c_combined/: .gitignore  FixIt.sh  J2735_201603DA.ASN  README.md  SEMI_v2.4.0_121223_j2020.asn  doIt.sh  generate-files.sh
asn1c_j2735/: .gitignore  Makefile  README.md
config/: adm.properties  aem.properties  example.blobconsumer.properties  example.properties
data/: Bah.InputData.packed.xml  Bah.InputData.xml  Ieee1609Dot2Data.unsecuredData.Bsm.coer  Ieee1609Dot2Data.unsecuredData.Bsm.coer.bah.hex  Ieee1609Dot2Data.unsecuredData.Bsm.coer.hex  Ieee1609Dot2Data.unsecuredData.Bsm.hex  Ieee1609Dot2Data.unsecuredData.Bsm.uper  Ieee1609Dot2Data.unsecuredData.Bsm.xml  Ieee1609Dot2Data.unsecuredData.TravelerInformation.hex  Ieee1609Dot2Data.unsecuredData.TravelerInformation.uper  Ieee1609Dot2Data.unsecuredData.TravelerInformation.xml  InputData.Ieee1609Dot2Data.Bsm.packed.xml  InputData.Ieee1609Dot2Data.Bsm.xml  InputData.Ieee1609Dot2Data.TravelerInformation.packed.xml  InputData.Ieee1609Dot2Data.TravelerInformation.xml  InputData.Ieee1609Dot2Data.coer.Bsm.bah.packed.xml  InputData.Ieee1609Dot2Data.coer.Bsm.bah.xml  InputData.Ieee1609Dot2Data.coer.Bsm.packed.xml  InputData.Ieee1609Dot2Data.packed.xml  InputData.Ieee1609Dot2Data.xml  InputData.TravelerInformation.packed.xml  InputData.TravelerInformation.xml  InputData.decoding.bsm.with.VehicleEventFlags.eventJackKnife.xml  InputData.decoding.bsm.with.VehicleEventFlags.xml  InputData.decoding.bsm.xml  InputData.encoding.bsm.xml  InputData.encoding.tim.error.payload.xml  InputData.encoding.tim.error.xml  InputData.encoding.tim.odeasdpayload-2020.xml  InputData.encoding.tim.odeasdpayload.xml  InputData.encoding.tim.odetimpayload.xml  InputData.encoding.tim.pp.xml  InputData.encoding.tim.xml  Output.error.packed.xml  Output.error.xml  README.md  j2735.MessageFrame.Bsm.hex  j2735.MessageFrame.Bsm.xml  producer_test1_xml.txt  producer_test2_xml.txt  (+5 more)
docker-test/: acm.sh  acm_standalone.sh  do_test.sh  test_in.py  test_out.py
docs/: Release_notes.md  acm.pptx  configuration.md  dockerhub.md  installation.md  installation.md.old  interface.md  testing.md
generated-files/: .gitignore
hooks/: pre_build
http-test/: .gitignore  README.md  batch-json.http  batch-text-plain.http  spat-uper-to-xer.http  test-large-batch.sh  test-thread-safety.sh
ieee_1609dot2_api/: .gitignore  1609dot2-base-types.asn  AesCcmCiphertext.c  AesCcmCiphertext.h  BasePublicEncryptionKey.c  BasePublicEncryptionKey.h  Certificate.c  Certificate.h  CertificateBase.c  CertificateBase.h  CertificateId.c  CertificateId.h  CertificateType.c  CertificateType.h  CircularRegion.c  CircularRegion.h  Countersignature.c  Countersignature.h  CountryAndRegions.c  CountryAndRegions.h  CountryAndSubregions.c  CountryAndSubregions.h  CountryOnly.c  CountryOnly.h  CrlSeries.c  CrlSeries.h  Duration.c  Duration.h  EccP256CurvePoint.c  EccP256CurvePoint.h  EcdsaP256Signature.c  EcdsaP256Signature.h  EciesP256EncryptedKey.c  EciesP256EncryptedKey.h  ElevInt.c  ElevInt.h  Elevation.c  Elevation.h  EncryptedData.c  EncryptedData.h  (+170 more)
include/: ASN1_Codec.hpp  acm.hpp  acm.hpp.aaron  acmLogger.hpp  acm_batch.hpp  acm_blob_producer.hpp  adm.hpp  desktop.ini  http_server.hpp  tool.hpp
j2735/: CMakeLists.txt
j2735/include/: asn1-j2735-lib.h
j2735/src/: asn1-j2735-lib.c  asn1-module-converter.c
j2735_module/: Makefile  test.cpp
kafka-test/: CMakeLists.txt  README.md
sae_j2735_SEMI_api/: .gitignore  Makefile  Makefile.am.sample  README.md
scms/: 1609dot2-P2P.asn  Makefile  component-cert-management-errors.asn  crl-base-types.asn  crl-protocol.asn  crl-ssp.asn  eca-ee-errors.asn  la-ma-errors.asn  la-pca-errors.asn  la-ra-errors.asn  ma-pca-errors.asn  ma-ra-errors.asn  pca-ra-errors.asn  ra-pg-errors.asn  scms-base-types.asn  scms-common-errors.asn  scms-error.asn  scms-protocol.asn  wsa-ssp.asn
src/: ASN1_Codec.cpp  CMakeLists.txt  CMakeLists.txt.1  acm.cpp  acm.cpp.aaron  acmLogger.cpp  acm_batch.cpp  acm_blob_producer.cpp  adm.cpp  aem.cpp  http_server.cpp  test_xml.cpp  tests.cpp  tool.cpp
test-scripts/: standalone.sh
unit-test-data/: 1609.xml  1609_BSM.xml  1609_MF.xml  ASD.xml  ASD_1609.xml  ASD_1609_BSM.xml  ASD_1609_MF.xml  ASD_BSM.xml  ASD_MF.xml  BSM.xml  (+4 more)
(+2568 files in other folders)
